Addressing some checkstyle issues picked up by sonar